Fixed nav height bug on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,6 +288,7 @@
     
     .nav-link-style {
         font-size: 1.6rem;
+        height: 50px;
     }
     
     .home-header {
@@ -312,6 +313,7 @@
     
     .nav-link-style {
         font-size: 1.8rem;
+        height: 60px;
     }
     
     .home-header {
